Test/3-9_cluster.clu
Cluster size 3
Cluster number 90103        # E:      Factor:7  P:  , Ori size:3    Sub:3    From:9           
   3    9     fam_3_1           1-60       1   leng: 59
   3    9     fam_3_2           1-60       1   leng: 59
   3    9     fam_3_3           1-60       1   leng: 59
